# gitpoke

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README_ja.md  SECURITY.md  TODO.md  grand_design.md  pcheck.config.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.md  best-practices.md  decisions.md  implementation.md  naming-conventions.md  tasks.md
src/: error.rs  lib.rs  main.rs  routes.rs
src/app/: config.rs  dependencies.rs  mod.rs
src/app/services/: auth_service.rs  badge_service.rs  mod.rs  poke_service.rs  user_service.rs
src/domain/: badge.rs  github.rs  mod.rs  poke.rs  user.rs  validation.rs
src/handlers/: auth.rs  badge.rs  health.rs  mod.rs  poke.rs  user.rs  utils.rs
src/infra/: mod.rs
src/infra/adapters/: database.rs  github.rs  mod.rs  oauth.rs
src/infra/cache/: mod.rs
src/infra/repositories/: badge.rs  mod.rs  poke.rs  user.rs
src/middlewares/: auth.rs  mod.rs
src/use_cases/: check_poke.rs  generate_badge.rs  mod.rs  user_settings.rs
src/util/: functional.rs  mod.rs
