[package]
name = "gitpoke"
version = "0.1.0"
edition = "2024"
authors = ["Ryo Morimoto <ryo.morimoto.dev@gmail.com>"]
description = "GitHub活動状況の可視化とリマインダーサービス"
license = "MIT"
repository = "https://github.com/ryo-morimoto/gitpoke"
readme = "README.md"

[dependencies]
# Webフレームワーク
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# GitHub API
octocrab = "0.33"

# シリアライゼーション
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日時処理
chrono = { version = "0.4", features = ["serde"] }

# エラー処理
thiserror = "1"
anyhow = "1"

# ロギング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = "1"

# データベース・キャッシュ
firestore = "0.39"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# クラウドストレージ
cloud-storage = "0.11"

# 環境変数
dotenvy = "0.15"

# ユーティリティ
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
regex = "1"
lazy_static = "1"

# セキュリティ
jsonwebtoken = "9"
sha2 = "0.10"
base64 = "0.22"

# 非同期trait
async-trait = "0.1"

# テストユーティリティ
mockall = { version = "0.12", optional = true }

[dev-dependencies]
# テスト用
mockall = "0.12"
testcontainers = "0.15"
wiremock = "0.6"

[features]
default = []
test-utils = ["mockall"]

[profile.release]
# 最適化レベル
opt-level = 3
# LTO（Link Time Optimization）を有効化
lto = true
# コードサイズ最適化
codegen-units = 1
# デバッグ情報を削除
strip = true